@@ -252,6 +252,8 @@ BUGFIXES:
   ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
   (phunt via cnauroth)
 
+  ZOOKEEPER-2243: Supported platforms is completely out of date (cnauroth)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
